--- a/index.html
+++ b/index.html
@@ -97,13 +97,15 @@
         import { getFirestore, doc, onSnapshot, setDoc } 
         from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
-        // --- ⬇️ ZONE À MODIFIER PAR L'UTILISATEUR ⬇️ ---
         const firebaseConfig = {
-            // COLLE TA CONFIG ICI (API Key, AuthDomain, ProjectId, etc.)
-            
-        };
-        // --- ⬆️ FIN DE LA ZONE À MODIFIER ⬆️ ---
-
+  apiKey: "AIzaSyDNm0Zl27uUmpr2giBPeY0HldAshHO1vcM",
+  authDomain: "follow-candidats.firebaseapp.com",
+  projectId: "follow-candidats",
+  storageBucket: "follow-candidats.firebasestorage.app",
+  messagingSenderId: "943976032068",
+  appId: "1:943976032068:web:3619ddbc2495cd7e4dd911",
+  measurementId: "G-94C0YR0B3R"
+};
         const app = initializeApp(firebaseConfig);
         const auth = getAuth(app);
         const db = getFirestore(app); // Initialisation de la BDD
