--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <meta name="theme-color" content="#0B1221">
     
     <title>SFEIR Board 2025</title>
+    <link rel="icon" type="image/png" href="icon.png">
+<link rel="apple-touch-icon" href="icon.png">
     <style>
         /* --- STYLE SFEIR 2025 (DARK & MOBILE) --- */
         :root {
