--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <button id="openModalBtn" class="bg-black text-white px-3 py-2 rounded-lg text-sm hover:bg-gray-800 transition whitespace-nowrap">
                         + Candidat
                     </button>
-                    <button id="logoutBtn" class="text-sm text-red-500 hover:bg-red-50 px-2 rounded">Sortir</button>
+                    <button id="logoutBtn" class="text-sm text-red-500 hover:bg-red-50 px-2 rounded">Déconnexion</button>
                 </div>
             </div>
         </header>
@@ -77,7 +77,7 @@
                 <div class="flex flex-col md:flex-row gap-4 h-auto md:h-full">
                     <div class="flex-1 flex flex-col min-h-[250px] md:h-full">
                         <div class="bg-white rounded-xl border border-gray-200 p-3 flex flex-col h-full shadow-sm">
-                            <span class="text-xs font-bold text-gray-400 uppercase mb-2 border-b pb-2 sticky top-0 bg-white z-10">Commerce</span>
+                            <span class="text-xs font-bold text-gray-400 uppercase mb-2 border-b pb-2 sticky top-0 bg-white z-10">échange commerce</span>
                             <div id="col-commerce" class="flex-1 md:overflow-y-auto"></div>
                         </div>
                     </div>
@@ -102,7 +102,7 @@
     <div id="modal-overlay" class="fixed inset-0 bg-black bg-opacity-60 z-[60] hidden flex items-center justify-center p-4">
         <div class="bg-white rounded-xl p-6 w-full max-w-sm shadow-2xl">
             <h2 class="text-lg font-bold mb-4">Ajouter un candidat</h2>
-            <input type="text" id="new-candidate-name" placeholder="Nom Prénom" class="w-full border border-gray-300 rounded-lg p-3 mb-4 focus:ring-2 focus:ring-blue-500 outline-none text-base">
+            <input type="text" id="new-candidate-name" placeholder="Prénom N." class="w-full border border-gray-300 rounded-lg p-3 mb-4 focus:ring-2 focus:ring-blue-500 outline-none text-base">
             <div class="flex justify-end gap-2">
                 <button id="cancelModalBtn" class="text-gray-500 hover:bg-gray-100 px-4 py-2 rounded-lg">Annuler</button>
                 <button id="saveCandidateBtn" class="bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700 font-medium">Enregistrer</button>
